unpackaged/main/default/objects/Brand_Form_Brand_Channel__mdt/Brand_Form_Brand_Channel__mdt.object-meta.xml
<CustomObject>
    <description>Channels associated with Brands. Refers to values in Channel__c field on Case.</description>
    <label>Brand Form - Brand Channel</label>
    <pluralLabel>Brand Form - Brand Channels</pluralLabel>
</CustomObject>