unpackaged/main/default/objects/Brand_Form_Brand_Channel__mdt/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Additional Information</description>
    <label>Additional Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>