unpackaged/main/default/objects/Brand_Form_Brand_Channel__mdt/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Parent brand</description>
    <inlineHelpText>Add associated Brand here.</inlineHelpText>
    <label>Brand</label>
    <referenceTo>Webform_Brands__mdt</referenceTo>
    <relationshipLabel>Brand Form - Brand Channels</relationshipLabel>
    <relationshipName>Brand_Channels</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>