unpackaged/main/default/objects/Brand_Form_Brand_Channel__mdt/fields/Single_Brand_Channel__c.field-meta.xml
<CustomField>
    <fullName>Single_Brand_Channel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single Brand Channel</label>
    <type>Checkbox</type>
</CustomField>