unpackaged/main/default/objects/Brand_Form_Brand_Channel__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>ECOM:  For any web-based commerce channel

RETAIL:  For retail location channels

OTHER RETAILER:  For wholesale location channels

SINGLE:  For any brand that is supported by one channel</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECom</fullName>
                <default>true</default>
                <label>ECom</label>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Other Retailer</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>