unpackaged/main/default/objects/Brand_Form_Brand_Channel__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Picklist value</description>
    <label>Value</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>